tests-integration/tests/snapshots/lowering_unit__basic_cycle.snap
---
source: tests-integration/tests/lowering_unit.rs
expression: "(terms, types)"
---
(
    [
        Base(
            Idx::<IndexedTermItem>(0),
        ),
        Recursive(
            Idx::<IndexedTermItem>(1),
        ),
        Mutual(
            [
                Idx::<IndexedTermItem>(3),
                Idx::<IndexedTermItem>(2),
            ],
        ),
        Mutual(
            [
                Idx::<IndexedTermItem>(6),
                Idx::<IndexedTermItem>(5),
                Idx::<IndexedTermItem>(4),
            ],
        ),
        Base(
            Idx::<IndexedTermItem>(7),
        ),
        Base(
            Idx::<IndexedTermItem>(8),
        ),
        Base(
            Idx::<IndexedTermItem>(9),
        ),
        Base(
            Idx::<IndexedTermItem>(10),
        ),
        Base(
            Idx::<IndexedTermItem>(11),
        ),
    ],
    [
        Base(
            Idx::<IndexedTypeItem>(0),
        ),
        Recursive(
            Idx::<IndexedTypeItem>(1),
        ),
        Mutual(
            [
                Idx::<IndexedTypeItem>(3),
                Idx::<IndexedTypeItem>(2),
            ],
        ),
        Mutual(
            [
                Idx::<IndexedTypeItem>(6),
                Idx::<IndexedTypeItem>(5),
                Idx::<IndexedTypeItem>(4),
            ],
        ),
    ],
)
