tests-integration/tests/snapshots/lowering_unit__do_fn_not_in_scope.snap
---
source: tests-integration/tests/lowering_unit.rs
expression: lowered.errors
---
[
    NotInScope(
        ExprVariable {
            id: AstId<syntax::cst::ExpressionVariable>(12),
        },
    ),
]
