tests-integration/tests/snapshots/lowering_unit__negate_not_in_scope.snap
---
source: tests-integration/tests/lowering_unit.rs
expression: lowered.errors
---
[
    NotInScope(
        NegateFn {
            id: AstId<syntax::cst::ExpressionNegate>(8),
        },
    ),
]
