tests-integration/tests/snapshots/lowering_unit__non_cycle_ordering.snap
---
source: tests-integration/tests/lowering_unit.rs
expression: "(terms, types)"
---
(
    [
        Base(
            Idx::<IndexedTermItem>(2),
        ),
        Base(
            Idx::<IndexedTermItem>(1),
        ),
        Base(
            Idx::<IndexedTermItem>(0),
        ),
    ],
    [],
)
