tests-integration/tests/snapshots/lowering_unit__recursive_kinds_errors.snap
---
source: tests-integration/tests/lowering_unit.rs
expression: groups.cycle_errors
---
[
    RecursiveKinds(
        RecursiveGroup {
            group: [
                Idx::<IndexedTypeItem>(1),
                Idx::<IndexedTypeItem>(0),
            ],
        },
    ),
    RecursiveKinds(
        RecursiveGroup {
            group: [
                Idx::<IndexedTypeItem>(3),
                Idx::<IndexedTypeItem>(2),
            ],
        },
    ),
]
