tests-integration/tests/snapshots/lowering_unit__recursive_synonym_errors.snap
---
source: tests-integration/tests/lowering_unit.rs
expression: groups.cycle_errors
---
[
    RecursiveSynonym(
        RecursiveGroup {
            group: [
                Idx::<IndexedTypeItem>(1),
                Idx::<IndexedTypeItem>(0),
            ],
        },
    ),
    RecursiveSynonym(
        RecursiveGroup {
            group: [
                Idx::<IndexedTypeItem>(2),
            ],
        },
    ),
]
